frontend/src/components/home/project/card-components/ProjectCard.module.css
.project-card {
    width: 100%;
    flex-grow: 1;
    flex-basis: 75%;
    display: flex;
    flex-direction: column;

    height: 40vh;
    max-height: 50vh;
    align-items: center;
}

.card-img {
    background-color: red;
    height: 100%;
    overflow: hidden;
}

.card-img>img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.card-content {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    height: 100%;
    padding: 0.5em;
    text-align: center;
    max-width: 100%;
}

.project-card a {
    text-transform: uppercase;
    display: block;
}

.skill-tags {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    column-gap: 0.5em;
    row-gap: 0.5em;
    padding: 0 1em;
}

.skill {
    padding: 0.5em 0.7em;
    background-color: var(--secondary-colour);
    color: var(--highlight-colour);
    --darker-highlight-colour: hsl(from var(--highlight-colour) h s calc(l - 15));
    border: 2px solid var(--darker-highlight-colour);
    border-radius: 2em;
    font-size: 0.85em;
    font-weight: 500;
}

@media screen and (min-width: 768px) {
    .card-img {
        order: 2;
    }

    .project-card {
        flex-direction: row;
    }

    .project-card>* {
        width: 50%;
    }

}

